boulder/boulder/tests/compile_fail/function/ret_ty/empty.bo
# Mismatched types:
# `Empty`
# `u32`
# (7:

fn void(a: u32) {
    a
}